# floresta-ffi

./: Cargo.toml
.github/workflows/: publish-swift.yml
floresta-ffi/: Cargo.toml  justfile
floresta-ffi/src/: lib.rs  logger.rs
floresta-swift/: .gitignore
floresta-swift/scripts/release/: build-release-macos-aarch64.sh
src/: floresta.udl  lib.rs
